Use ruby to run tests

--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,12 @@ machine:
     XCODE_SCHEME: 'scheme'
     XCODE_WORKSPACE: 'workspace'
 dependencies:
-  override:
+  pre:
     - sudo pip install jsonschema
 test:
   override:
     - ./software_versions.rb > $CIRCLE_ARTIFACTS/software_versions.json
+    - bundle exec rspec:
+        environment:
+          SOFTWARE: $CIRCLE_ARTIFACTS/software_versions.json
     - jsonschema -i $CIRCLE_ARTIFACTS/software_versions.json software_versions.schema.json
