--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,11 @@ machine:
   environment:
     XCODE_SCHEME: 'scheme'
     XCODE_WORKSPACE: 'workspace'
+
+general:
+  artifacts:
+    - pages/_site
+
 dependencies:
   pre:
     - sudo pip install jsonschema
@@ -12,3 +17,5 @@ test:
         environment:
           SOFTWARE: $CIRCLE_ARTIFACTS/software_versions.json
     - jsonschema -i $CIRCLE_ARTIFACTS/software_versions.json software_versions.schema.json
+    - bundle exec jekyll build:
+        pwd: pages
