--- a/spec/fixtures/xcode/xcode_80.yml
+++ b/spec/fixtures/xcode/xcode_80.yml
@@ -1,78 +1,78 @@
 version: "8.0"
 build_version: "8A218a"
 simulators:
-  - name: Apple TV 1080p (10.0)
-  - name: Apple TV 1080p (9.2)
-  - name: Apple Watch - 38mm (3.0)
-  - name: Apple Watch - 42mm (3.0)
-  - name: iPad 2 (8.4)
-  - name: iPad 2 (9.0)
-  - name: iPad 2 (9.2)
-  - name: iPad 2 (9.3)
-  - name: iPad Air (10.0)
-  - name: iPad Air (10.1)
-  - name: iPad Air (8.4)
-  - name: iPad Air (9.0)
-  - name: iPad Air (9.2)
-  - name: iPad Air (9.3)
-  - name: iPad Air 2 (10.0)
-  - name: iPad Air 2 (10.1)
-  - name: iPad Air 2 (9.0)
-  - name: iPad Air 2 (9.2)
-  - name: iPad Air 2 (9.3)
-  - name: iPad Pro (12.9 inch) (10.0)
-  - name: iPad Pro (12.9 inch) (10.1)
-  - name: iPad Pro (9.7 inch) (10.0)
-  - name: iPad Pro (9.7 inch) (10.1)
-  - name: iPad Retina (10.0)
-  - name: iPad Retina (10.1)
-  - name: iPad Retina (8.4)
-  - name: iPad Retina (9.0)
-  - name: iPad Retina (9.2)
-  - name: iPad Retina (9.3)
-  - name: iPhone 4s (8.4)
-  - name: iPhone 4s (9.0)
-  - name: iPhone 4s (9.2)
-  - name: iPhone 4s (9.3)
-  - name: iPhone 5 (10.0)
-  - name: iPhone 5 (10.1)
-  - name: iPhone 5 (8.4)
-  - name: iPhone 5 (9.0)
-  - name: iPhone 5 (9.2)
-  - name: iPhone 5 (9.3)
-  - name: iPhone 5s (10.0)
-  - name: iPhone 5s (10.1)
-  - name: iPhone 5s (8.4)
-  - name: iPhone 5s (9.0)
-  - name: iPhone 5s (9.2)
-  - name: iPhone 5s (9.3)
-  - name: iPhone 6 (10.0)
-  - name: iPhone 6 (10.1)
-  - name: iPhone 6 (8.4)
-  - name: iPhone 6 (9.0)
-  - name: iPhone 6 (9.2)
-  - name: iPhone 6 (9.3)
-  - name: iPhone 6 Plus (10.0)
-  - name: iPhone 6 Plus (10.1)
-  - name: iPhone 6 Plus (8.4)
-  - name: iPhone 6 Plus (9.0)
-  - name: iPhone 6 Plus (9.2)
-  - name: iPhone 6 Plus (9.3)
-  - name: iPhone 6s (10.0)
-  - name: iPhone 6s (10.1)
-  - name: iPhone 6s (9.0)
-  - name: iPhone 6s (9.2)
-  - name: iPhone 6s (9.3)
-  - name: iPhone 6s Plus (10.0)
-  - name: iPhone 6s Plus (10.1)
-  - name: iPhone 6s Plus (9.0)
-  - name: iPhone 6s Plus (9.2)
-  - name: iPhone 6s Plus (9.3)
-  - name: iPhone 7 (10.0)
-  - name: iPhone 7 (10.0) + Apple Watch Series 2 - 38mm (3.0)
-  - name: iPhone 7 (10.1)
-  - name: iPhone 7 Plus (10.0)
-  - name: iPhone 7 Plus (10.0) + Apple Watch Series 2 - 42mm (3.0)
-  - name: iPhone 7 Plus (10.1)
-  - name: iPhone SE (10.0)
-  - name: iPhone SE (10.1)
+  - Apple TV 1080p (10.0)
+  - Apple TV 1080p (9.2)
+  - Apple Watch - 38mm (3.0)
+  - Apple Watch - 42mm (3.0)
+  - iPad 2 (8.4)
+  - iPad 2 (9.0)
+  - iPad 2 (9.2)
+  - iPad 2 (9.3)
+  - iPad Air (10.0)
+  - iPad Air (10.1)
+  - iPad Air (8.4)
+  - iPad Air (9.0)
+  - iPad Air (9.2)
+  - iPad Air (9.3)
+  - iPad Air 2 (10.0)
+  - iPad Air 2 (10.1)
+  - iPad Air 2 (9.0)
+  - iPad Air 2 (9.2)
+  - iPad Air 2 (9.3)
+  - iPad Pro (12.9 inch) (10.0)
+  - iPad Pro (12.9 inch) (10.1)
+  - iPad Pro (9.7 inch) (10.0)
+  - iPad Pro (9.7 inch) (10.1)
+  - iPad Retina (10.0)
+  - iPad Retina (10.1)
+  - iPad Retina (8.4)
+  - iPad Retina (9.0)
+  - iPad Retina (9.2)
+  - iPad Retina (9.3)
+  - iPhone 4s (8.4)
+  - iPhone 4s (9.0)
+  - iPhone 4s (9.2)
+  - iPhone 4s (9.3)
+  - iPhone 5 (10.0)
+  - iPhone 5 (10.1)
+  - iPhone 5 (8.4)
+  - iPhone 5 (9.0)
+  - iPhone 5 (9.2)
+  - iPhone 5 (9.3)
+  - iPhone 5s (10.0)
+  - iPhone 5s (10.1)
+  - iPhone 5s (8.4)
+  - iPhone 5s (9.0)
+  - iPhone 5s (9.2)
+  - iPhone 5s (9.3)
+  - iPhone 6 (10.0)
+  - iPhone 6 (10.1)
+  - iPhone 6 (8.4)
+  - iPhone 6 (9.0)
+  - iPhone 6 (9.2)
+  - iPhone 6 (9.3)
+  - iPhone 6 Plus (10.0)
+  - iPhone 6 Plus (10.1)
+  - iPhone 6 Plus (8.4)
+  - iPhone 6 Plus (9.0)
+  - iPhone 6 Plus (9.2)
+  - iPhone 6 Plus (9.3)
+  - iPhone 6s (10.0)
+  - iPhone 6s (10.1)
+  - iPhone 6s (9.0)
+  - iPhone 6s (9.2)
+  - iPhone 6s (9.3)
+  - iPhone 6s Plus (10.0)
+  - iPhone 6s Plus (10.1)
+  - iPhone 6s Plus (9.0)
+  - iPhone 6s Plus (9.2)
+  - iPhone 6s Plus (9.3)
+  - iPhone 7 (10.0)
+  - iPhone 7 (10.0) + Apple Watch Series 2 - 38mm (3.0)
+  - iPhone 7 (10.1)
+  - iPhone 7 Plus (10.0)
+  - iPhone 7 Plus (10.0) + Apple Watch Series 2 - 42mm (3.0)
+  - iPhone 7 Plus (10.1)
+  - iPhone SE (10.0)
+  - iPhone SE (10.1)
