--- a/pages/_config.yml
+++ b/pages/_config.yml
@@ -3,3 +3,4 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: default
+baseurl: /macos-image-tests
