--- a/spec/fixtures/xcode/xcode_71.yml
+++ b/spec/fixtures/xcode/xcode_71.yml
@@ -1,6 +1,6 @@
 version: "7.1"
 build_version: "7B91b"
-app_location: "/Applications//Xcode-7.1.app"
+app_location: "/Applications/Xcode-7.1.app"
 simulators:
   - Apple TV 1080p (10.0)
   - Apple TV 1080p (9.2)
