--- a/spec/fixtures/xcode/xcode_73.yml
+++ b/spec/fixtures/xcode/xcode_73.yml
@@ -1,6 +1,6 @@
 version: "7.3"
 build_version: "7D175"
-app_location: "/Applications//Xcode-7.3.app"
+app_location: "/Applications/Xcode-7.3.app"
 simulators:
   - Apple TV 1080p (10.0)
   - Apple TV 1080p (9.2)
