--- a/spec/fixtures/xcode/xcode_70.yml
+++ b/spec/fixtures/xcode/xcode_70.yml
@@ -1,6 +1,7 @@
 version: "7.0"
 build_version: "7A220"
 app_location: "/Applications/Xcode-7.0.app"
+first_launch_status: 0
 simulators:
   - iPad 2 (8.4)
   - iPad 2 (9.0)
