--- a/spec/fixtures/xcode/xcode_82.yml
+++ b/spec/fixtures/xcode/xcode_82.yml
@@ -1,6 +1,7 @@
 version: "8.2.1"
 build_version: "8C1002"
 app_location: "/Applications/Xcode-8.2.app"
+first_launch_status: 0
 simulators:
   - Apple TV 1080p (10.0)
   - Apple TV 1080p (10.1)
