--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -8,7 +8,7 @@ os:
   system_integrity_protection: Enabled
 environment:
   keyboard_layout: com.apple.keylayout.US
-  timezone: PST
+  timezone: PDT
   screensaver_ask_for_password: "0"
 tools:
   python: Python 2.7.10
@@ -17,5 +17,6 @@ tools:
     java version "1.8.0_60"
     Java(TM) SE Runtime Environment (build 1.8.0_60-b27)
     Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)
+  parallel: GNU parallel 20160922
 ruby:
   version: ruby 2.3.1p112 (2016-04-26 revision 54768) [x86_64-darwin15]
