--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,8 @@
 machine:
   environment:
-    GIT_DEPLOY_USERNAME: deploy_bot
-    GIT_DEPLOY_EMAIL:    deploy@circleci.com
-    GIT_DEPLOY_DIR:      pages/_site
-    GIT_DEPLOY_BRANCH:   gh-pages
+    CACHE_MAX_AGE:  600
+    DEPLOY_DIR: pages/_site
+    SOFTWARE: $CIRCLE_ARTIFACTS/software_versions.json
   xcode:
     version: 8.3.2
 
@@ -14,20 +13,21 @@ general:
 dependencies:
   pre:
     - brew install jq
-    - sudo pip install jsonschema
+    - sudo pip install jsonschema awscli --ignore-installed six
 test:
   override:
-    - ./software_versions.rb > $CIRCLE_ARTIFACTS/software_versions.json
-    - bundle exec rspec:
-        environment:
-          SOFTWARE: $CIRCLE_ARTIFACTS/software_versions.json
-    - jsonschema -i $CIRCLE_ARTIFACTS/software_versions.json software_versions.schema.json
+    - ./software_versions.rb > $SOFTWARE
+    - bundle exec rspec
+    - jsonschema -i $SOFTWARE software_versions.schema.json
     - bundle exec jekyll build:
         pwd: pages
-    - jq '.image.sha1' software_versions.json
 
 deployment:
   publish:
-    branch: master
+    branch: [master, /release.*/]
     commands:
-      - scripts/deploy.sh
+      - aws s3 cp
+          --acl public-read
+          --cache-control "max-age=$CACHE_MAX_AGE"
+          --recursive $DEPLOY_DIR
+          s3://circle-macos-docs/image-manifest/`jq -r '.image.build' $SOFTWARE`
