--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,7 @@ deployment:
   publish:
     branch: [master, /release.*/]
     commands:
-      - echo aws s3 cp
+      - aws s3 cp
           --acl public-read
           --cache-control "max-age=$CACHE_MAX_AGE"
           --recursive $DEPLOY_DIR
