--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -11,13 +11,13 @@ environment:
   timezone: PDT
   screensaver_ask_for_password: "0"
 tools:
-  python: Python 2.7.10
-  pip: pip 9.0.1 from /Library/Python/2.7/site-packages/pip-9.0.1-py2.7.egg (python 2.7)
+  python: Python 2.7.13
+  pip: pip 9.0.1 from /usr/local/lib/python2.7/site-packages (python 2.7)
   java: |-
     java version "1.8.0_131"
     Java(TM) SE Runtime Environment (build 1.8.0_131-b11)
     Java HotSpot(TM) 64-Bit Server VM (build 25.131-b11, mixed mode)
-  parallel: GNU parallel 20170322
+  parallel: GNU parallel 20170522
 ruby:
   version: ruby 2.3.4p301 (2017-03-30 revision 58214) [x86_64-darwin16]
 power_settings:
