--- a/spec/fixtures/xcode/xcode_90.yml
+++ b/spec/fixtures/xcode/xcode_90.yml
@@ -1,5 +1,5 @@
 version: "9.0"
-build_version: "9M137d"
+build_version: "9M202q"
 app_location: "/Applications/Xcode-9.0.app"
 simulators:
   - "Apple TV 1080p (11.0)"
