--- a/spec/fixtures/xcode/xcode_90.yml
+++ b/spec/fixtures/xcode/xcode_90.yml
@@ -1,8 +1,7 @@
 version: "9.0"
-build_version: "9M202q"
+build_version: "9M214v"
 app_location: "/Applications/Xcode-9.0.app"
 simulators:
-  - "Apple TV 1080p (11.0)"
   - "iPad (5th generation) (11.0)"
   - "iPad Air (10.2)"
   - "iPad Air (11.0)"
@@ -23,10 +22,8 @@ simulators:
   - "iPhone 6 Plus (11.0)"
   - "iPhone 6s (10.2)"
   - "iPhone 6s (11.0)"
-  - "iPhone 6s (11.0) + Apple Watch - 38mm (4.0)"
   - "iPhone 6s Plus (10.2)"
   - "iPhone 6s Plus (11.0)"
-  - "iPhone 6s Plus (11.0) + Apple Watch - 42mm (4.0)"
   - "iPhone 7 (10.2)"
   - "iPhone 7 (11.0)"
   - "iPhone 7 (11.0) + Apple Watch Series 2 - 38mm (4.0)"
@@ -35,3 +32,5 @@ simulators:
   - "iPhone 7 Plus (11.0) + Apple Watch Series 2 - 42mm (4.0)"
   - "iPhone SE (10.2)"
   - "iPhone SE (11.0)"
+  - "Apple Watch - 38mm (4.0)"
+  - "Apple Watch - 42mm (4.0)"
