--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -17,13 +17,14 @@ tools:
     java version "1.8.0_144"
     Java(TM) SE Runtime Environment (build 1.8.0_144-b01)
     Java HotSpot(TM) 64-Bit Server VM (build 25.144-b01, mixed mode)
-  parallel: GNU parallel 20170722
+  parallel: GNU parallel 20170822
 ruby:
   version: ruby 2.3.4p301 (2017-03-30 revision 58214) [x86_64-darwin16]
 power_settings:
+  hibernatemode: 0
+  womp: 1
+  networkoversleep: 0
   sleep: 0
-  # powernap: 0 TODO - add this
+  ttyskeepawake: 1
   disksleep: 0
   displaysleep: 0
-  hibernatemode: 0
-
