--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -1,6 +1,6 @@
 os:
-  system_version: macOS 10.12.5 (16F73)
-  kernel_version: Darwin 16.6.0
+  system_version: macOS 10.12.6 (16G29)
+  kernel_version: Darwin 16.7.0
   boot_volume: Macintosh HD
   boot_mode: Normal
   user_name: "Distiller (distiller)"
@@ -17,9 +17,9 @@ tools:
     java version "1.8.0_144"
     Java(TM) SE Runtime Environment (build 1.8.0_144-b01)
     Java HotSpot(TM) 64-Bit Server VM (build 25.144-b01, mixed mode)
-  parallel: GNU parallel 20170822
+  parallel: GNU parallel 20170922
 ruby:
-  version: ruby 2.3.4p301 (2017-03-30 revision 58214) [x86_64-darwin16]
+  version: ruby 2.3.5p376 (2017-09-14 revision 59905) [x86_64-darwin16]
 power_settings:
   hibernatemode: 0
   womp: 1
