--- a/spec/fixtures/homebrew.yml
+++ b/spec/fixtures/homebrew.yml
@@ -1,3 +1,6 @@
-carthage: [0.26.2]
-node: [8.9.1]
-yarn: [1.3.2]
+carthage: [0.28.0]
+node: [9.8.0]
+yarn: [1.5.1_1]
+tccutil: [1.2.3]
+git: [2.16.2]
+git-lfs: [2.4.0]
