--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -1,25 +1,25 @@
 os:
-  system_version: macOS 10.12.6 (16G29)
-  kernel_version: Darwin 16.7.0
+  system_version: macOS 10.13.3 (17D102)
+  kernel_version: Darwin 17.4.0
   boot_volume: Macintosh HD
   boot_mode: Normal
-  user_name: "Distiller (distiller)"
+  user_name: Distiller (distiller)
   secure_virtual_memory: Enabled
   system_integrity_protection: Enabled
 environment:
   keyboard_layout: com.apple.keylayout.US
-  timezone: PST
-  screensaver_ask_for_password: "0"
+  timezone: PDT
+  screensaver_ask_for_password: error # TODO - what's up here?
 tools:
   python: Python 2.7.13
   pip: pip 9.0.1 from /usr/local/lib/python2.7/site-packages (python 2.7)
   java: |-
-    java version "1.8.0_152"
-    Java(TM) SE Runtime Environment (build 1.8.0_152-b16)
-    Java HotSpot(TM) 64-Bit Server VM (build 25.152-b16, mixed mode)
-  parallel: GNU parallel 20171122
+    java version "1.8.0_162"
+    Java(TM) SE Runtime Environment (build 1.8.0_162-b12)
+    Java HotSpot(TM) 64-Bit Server VM (build 25.162-b12, mixed mode)
+  parallel: GNU parallel 20180122
 ruby:
-  version: ruby 2.3.5p376 (2017-09-14 revision 59905) [x86_64-darwin16]
+  version: ruby 2.3.6p384 (2017-12-14 revision 61254) [x86_64-darwin17]
 power_settings:
   hibernatemode: 0
   womp: 1
