--- a/spec/fixtures/homebrew.yml
+++ b/spec/fixtures/homebrew.yml
@@ -1,6 +1,6 @@
-carthage: [0.28.0]
-node: [9.8.0]
+carthage: [0.29.0]
+node: [9.10.0_1]
 yarn: [1.5.1_1]
 tccutil: [1.2.3]
-git: [2.16.2]
+git: [2.16.3]
 git-lfs: [2.4.0]
