--- a/spec/fixtures/xcode/xcode_93.yml
+++ b/spec/fixtures/xcode/xcode_93.yml
@@ -1,5 +1,5 @@
 version: "9.3"
-build_version: "9Q127n"
+build_version: "9E145"
 app_location: "/Applications/Xcode-9.3.app"
 simulators:
   - Apple TV (11.2)
@@ -16,33 +16,48 @@ simulators:
   - Apple Watch Series 2 - 42mm (4.2)
   - Apple Watch Series 3 - 38mm (4.2)
   - Apple Watch Series 3 - 42mm (4.2)
+  - iPad (5th generation) (10.3.1)
   - iPad (5th generation) (11.2)
   - iPad (5th generation) (11.3)
+  - iPad Air (10.3.1)
   - iPad Air (11.2)
   - iPad Air (11.3)
+  - iPad Air 2 (10.3.1)
   - iPad Air 2 (11.2)
   - iPad Air 2 (11.3)
+  - iPad Pro (10.5-inch) (10.3.1)
   - iPad Pro (10.5-inch) (11.2)
   - iPad Pro (10.5-inch) (11.3)
+  - iPad Pro (12.9 inch) (10.3.1)
   - iPad Pro (12.9-inch) (11.2)
   - iPad Pro (12.9-inch) (11.3)
+  - iPad Pro (12.9-inch) (2nd generation) (10.3.1)
   - iPad Pro (12.9-inch) (2nd generation) (11.2)
   - iPad Pro (12.9-inch) (2nd generation) (11.3)
+  - iPad Pro (9.7 inch) (10.3.1)
   - iPad Pro (9.7-inch) (11.2)
   - iPad Pro (9.7-inch) (11.3)
+  - iPhone 5 (10.3.1)
+  - iPhone 5s (10.3.1)
   - iPhone 5s (11.2)
   - iPhone 5s (11.3)
+  - iPhone 6 (10.3.1)
   - iPhone 6 (11.2)
   - iPhone 6 (11.3)
+  - iPhone 6 Plus (10.3.1)
   - iPhone 6 Plus (11.2)
   - iPhone 6 Plus (11.3)
+  - iPhone 6s (10.3.1)
   - iPhone 6s (11.2)
   - iPhone 6s (11.3)
+  - iPhone 6s Plus (10.3.1)
   - iPhone 6s Plus (11.2)
   - iPhone 6s Plus (11.3)
+  - iPhone 7 (10.3.1)
   - iPhone 7 (11.2)
   - iPhone 7 (11.3)
   - iPhone 7 (11.3) + Apple Watch Series 2 - 38mm (4.3)
+  - iPhone 7 Plus (10.3.1)
   - iPhone 7 Plus (11.2)
   - iPhone 7 Plus (11.3)
   - iPhone 7 Plus (11.3) + Apple Watch Series 2 - 42mm (4.3)
@@ -52,6 +67,7 @@ simulators:
   - iPhone 8 Plus (11.2)
   - iPhone 8 Plus (11.3)
   - iPhone 8 Plus (11.3) + Apple Watch Series 3 - 42mm (4.3)
+  - iPhone SE (10.3.1)
   - iPhone SE (11.2)
   - iPhone SE (11.3)
   - iPhone X (11.2)
