--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -1,6 +1,6 @@
 os:
-  system_version: macOS 10.13.3 (17D102)
-  kernel_version: Darwin 17.4.0
+  system_version: macOS 10.13.6 (17G65)
+  kernel_version: Darwin 17.7.0
   boot_volume: Macintosh HD
   boot_mode: Normal
   user_name: Distiller (distiller)
@@ -13,13 +13,10 @@ environment:
 tools:
   python: Python 2.7.15
   python3: Python 3.7.0
-  pip: pip 18.0 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)
-  pip3: pip 18.0 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)
-  java: |-
-    java version "1.8.0_181"
-    Java(TM) SE Runtime Environment (build 1.8.0_181-b13)
-    Java HotSpot(TM) 64-Bit Server VM (build 25.181-b13, mixed mode)
-  parallel: GNU parallel 20180722
+  pip: 'pip 18.0 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)'
+  pip3: 'pip 18.0 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)'
+  java: "java version \"1.8.0_181\"\nJava(TM) SE Runtime Environment (build 1.8.0_181-b13)\nJava HotSpot(TM) 64-Bit Server VM (build 25.181-b13, mixed mode)"
+  parallel: 'GNU parallel 20180922'
 ruby:
   system: ruby 2.3.7p456 (2018-03-28 revision 63024) [x86_64-darwin17]
   installed:
