--- a/spec/fixtures/xcode/xcode.yml
+++ b/spec/fixtures/xcode/xcode.yml
@@ -1,74 +1,51 @@
-version: "9.4.1"
-build_version: "9F2000"
-app_location: "/Applications/Xcode-9.4.1.app"
+version: "10.0"
+build_version: "10L221o"
+app_location: "/Applications/Xcode-10.app"
 simulators:
-  - Apple TV (11.2)
-  - Apple TV (11.4)
-  - Apple TV 4K (11.2)
-  - Apple TV 4K (11.4)
-  - Apple TV 4K (at 1080p) (11.2)
-  - Apple TV 4K (at 1080p) (11.4)
-  - Apple Watch - 38mm (4.2)
-  - Apple Watch - 38mm (4.3)
-  - Apple Watch - 42mm (4.2)
-  - Apple Watch - 42mm (4.3)
-  - Apple Watch Series 2 - 38mm (4.2)
-  - Apple Watch Series 2 - 42mm (4.2)
-  - Apple Watch Series 3 - 38mm (4.2)
-  - Apple Watch Series 3 - 42mm (4.2)
-  - iPad (5th generation) (10.3.1)
-  - iPad (5th generation) (11.2)
-  - iPad (5th generation) (11.4)
-  - iPad Air (10.3.1)
-  - iPad Air (11.2)
-  - iPad Air (11.4)
-  - iPad Air 2 (10.3.1)
-  - iPad Air 2 (11.2)
-  - iPad Air 2 (11.4)
-  - iPad Pro (10.5-inch) (10.3.1)
-  - iPad Pro (10.5-inch) (11.2)
-  - iPad Pro (10.5-inch) (11.4)
-  - iPad Pro (12.9 inch) (10.3.1)
-  - iPad Pro (12.9-inch) (11.2)
-  - iPad Pro (12.9-inch) (11.4)
-  - iPad Pro (12.9-inch) (2nd generation) (10.3.1)
-  - iPad Pro (12.9-inch) (2nd generation) (11.2)
-  - iPad Pro (12.9-inch) (2nd generation) (11.4)
-  - iPad Pro (9.7 inch) (10.3.1)
-  - iPad Pro (9.7-inch) (11.2)
-  - iPad Pro (9.7-inch) (11.4)
-  - iPhone 5 (10.3.1)
-  - iPhone 5s (10.3.1)
-  - iPhone 5s (11.2)
-  - iPhone 5s (11.4)
-  - iPhone 6 (10.3.1)
-  - iPhone 6 (11.2)
-  - iPhone 6 (11.4)
-  - iPhone 6 Plus (10.3.1)
-  - iPhone 6 Plus (11.2)
-  - iPhone 6 Plus (11.4)
-  - iPhone 6s (10.3.1)
-  - iPhone 6s (11.2)
-  - iPhone 6s (11.4)
-  - iPhone 6s Plus (10.3.1)
-  - iPhone 6s Plus (11.2)
-  - iPhone 6s Plus (11.4)
-  - iPhone 7 (10.3.1)
-  - iPhone 7 (11.2)
-  - iPhone 7 (11.4)
-  - iPhone 7 (11.4) + Apple Watch Series 2 - 38mm (4.3)
-  - iPhone 7 Plus (10.3.1)
-  - iPhone 7 Plus (11.2)
-  - iPhone 7 Plus (11.4)
-  - iPhone 7 Plus (11.4) + Apple Watch Series 2 - 42mm (4.3)
-  - iPhone 8 (11.2)
-  - iPhone 8 (11.4)
-  - iPhone 8 (11.4) + Apple Watch Series 3 - 38mm (4.3)
-  - iPhone 8 Plus (11.2)
-  - iPhone 8 Plus (11.4)
-  - iPhone 8 Plus (11.4) + Apple Watch Series 3 - 42mm (4.3)
-  - iPhone SE (10.3.1)
-  - iPhone SE (11.2)
-  - iPhone SE (11.4)
-  - iPhone X (11.2)
-  - iPhone X (11.4)
+  - Apple TV (12.0)
+  - Apple TV (12.0)
+  - Apple TV 4K (12.0)
+  - Apple TV 4K (12.0)
+  - Apple TV 4K (at 1080p) (12.0)
+  - Apple TV 4K (at 1080p) (12.0)
+  - iPad (5th generation) (12.0)
+  - iPad (5th generation) (12.0)
+  - iPad (6th generation) (12.0)
+  - iPad (6th generation) (12.0)
+  - iPad Air (12.0)
+  - iPad Air (12.0)
+  - iPad Air 2 (12.0)
+  - iPad Air 2 (12.0)
+  - iPad Pro (10.5-inch) (12.0)
+  - iPad Pro (10.5-inch) (12.0)
+  - iPad Pro (12.9-inch) (12.0)
+  - iPad Pro (12.9-inch) (12.0)
+  - iPad Pro (12.9-inch) (2nd generation) (12.0)
+  - iPad Pro (9.7-inch) (12.0)
+  - iPad Pro (9.7-inch) (12.0)
+  - iPhone 5s (12.0)
+  - iPhone 5s (12.0)
+  - iPhone 6 (12.0)
+  - iPhone 6 (12.0)
+  - iPhone 6 Plus (12.0)
+  - iPhone 6 Plus (12.0)
+  - iPhone 6s (12.0)
+  - iPhone 6s (12.0)
+  - iPhone 6s Plus (12.0)
+  - iPhone 6s Plus (12.0)
+  - iPhone 7 (12.0)
+  - iPhone 7 (12.0)
+  - iPhone 7 (12.0) + Apple Watch Series 2 - 38mm (5.0)
+  - iPhone 7 Plus (12.0)
+  - iPhone 7 Plus (12.0)
+  - iPhone 7 Plus (12.0) + Apple Watch Series 2 - 42mm (5.0)
+  - iPhone 8 (12.0)
+  - iPhone 8 (12.0)
+  - iPhone 8 (12.0) + Apple Watch Series 3 - 38mm (5.0)
+  - iPhone 8 Plus (12.0)
+  - iPhone 8 Plus (12.0)
+  - iPhone 8 Plus (12.0) + Apple Watch Series 3 - 42mm (5.0)
+  - iPhone SE (12.0)
+  - iPhone SE (12.0)
+  - iPhone X (12.0)
+  - iPhone X (12.0)
