--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -1,6 +1,6 @@
 os:
-  system_version: macOS 10.13.6 (17G3025)
-  kernel_version: Darwin 17.7.0
+  system_version: macOS 10.14.3 (18D109)
+  kernel_version: Darwin 18.2.0
   boot_volume: Macintosh HD
   boot_mode: Normal
   user_name: Distiller (distiller)
@@ -12,13 +12,13 @@ environment:
   screensaver_ask_for_password: error # TODO - what's up here?
 tools:
   python: Python 2.7.15
-  python3: Python 3.7.0
-  pip: 'pip 18.0 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)'
-  pip3: 'pip 18.0 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)'
-  java: "java version \"1.8.0_192\"\nJava(TM) SE Runtime Environment (build 1.8.0_192-b12)\nJava HotSpot(TM) 64-Bit Server VM (build 25.192-b12, mixed mode)"
-  parallel: 'GNU parallel 20181022'
+  python3: Python 3.7.2
+  pip: 'pip 19.0.2 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)'
+  pip3: 'pip 19.0.2 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)'
+  java: "java version \"1.8.0_202\"\nJava(TM) SE Runtime Environment (build 1.8.0_202-b08)\nJava HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)"
+  parallel: 'GNU parallel 20190122'
 ruby:
-  system: ruby 2.3.7p456 (2018-03-28 revision 63024) [universal.x86_64-darwin17]
+  system: ruby 2.3.7p456 (2018-03-28 revision 63024) [universal.x86_64-darwin18]
   installed:
     - 2.4.5
     - 2.5.3
