--- a/spec/fixtures/xcode/xcode.yml
+++ b/spec/fixtures/xcode/xcode.yml
@@ -2,37 +2,37 @@ version: "10.2"
 build_version: "10P91b"
 app_location: "/Applications/Xcode-10.2.app"
 simulators:
-  - "Apple TV (12.2)",
-  - "Apple TV 4K (12.2)",
-  - "Apple TV 4K (at 1080p) (12.2)",
-  - "Apple Watch Series 2 - 38mm (5.2)",
-  - "Apple Watch Series 2 - 42mm (5.2)",
-  - "Apple Watch Series 3 - 38mm (5.2)",
-  - "Apple Watch Series 3 - 42mm (5.2)",
-  - "Distiller’s Mac (74)",
-  - "iPad (5th generation) (12.2)",
-  - "iPad (6th generation) (12.2)",
-  - "iPad Air (12.2)",
-  - "iPad Air 2 (12.2)",
-  - "iPad Pro (10.5-inch) (12.2)",
-  - "iPad Pro (11-inch) (12.2)",
-  - "iPad Pro (12.9-inch) (12.2)",
-  - "iPad Pro (12.9-inch) (2nd generation) (12.2)",
-  - "iPad Pro (12.9-inch) (3rd generation) (12.2)",
-  - "iPad Pro (9.7-inch) (12.2)",
-  - "iPhone 5s (12.2)",
-  - "iPhone 6 (12.2)",
-  - "iPhone 6 Plus (12.2)",
-  - "iPhone 6s (12.2)",
-  - "iPhone 6s Plus (12.2)",
-  - "iPhone 7 (12.2)",
-  - "iPhone 7 Plus (12.2)",
-  - "iPhone 8 (12.2)",
-  - "iPhone 8 Plus (12.2)",
-  - "iPhone SE (12.2)",
-  - "iPhone X (12.2)",
-  - "iPhone Xs (12.2)",
-  - "iPhone Xs (12.2) + Apple Watch Series 4 - 40mm (5.2)",
-  - "iPhone Xs Max (12.2)",
-  - "iPhone Xs Max (12.2) + Apple Watch Series 4 - 44mm (5.2)",
+  - "Apple TV (12.2)"
+  - "Apple TV 4K (12.2)"
+  - "Apple TV 4K (at 1080p) (12.2)"
+  - "Apple Watch Series 2 - 38mm (5.2)"
+  - "Apple Watch Series 2 - 42mm (5.2)"
+  - "Apple Watch Series 3 - 38mm (5.2)"
+  - "Apple Watch Series 3 - 42mm (5.2)"
+  - "Distiller’s Mac (74)"
+  - "iPad (5th generation) (12.2)"
+  - "iPad (6th generation) (12.2)"
+  - "iPad Air (12.2)"
+  - "iPad Air 2 (12.2)"
+  - "iPad Pro (10.5-inch) (12.2)"
+  - "iPad Pro (11-inch) (12.2)"
+  - "iPad Pro (12.9-inch) (12.2)"
+  - "iPad Pro (12.9-inch) (2nd generation) (12.2)"
+  - "iPad Pro (12.9-inch) (3rd generation) (12.2)"
+  - "iPad Pro (9.7-inch) (12.2)"
+  - "iPhone 5s (12.2)"
+  - "iPhone 6 (12.2)"
+  - "iPhone 6 Plus (12.2)"
+  - "iPhone 6s (12.2)"
+  - "iPhone 6s Plus (12.2)"
+  - "iPhone 7 (12.2)"
+  - "iPhone 7 Plus (12.2)"
+  - "iPhone 8 (12.2)"
+  - "iPhone 8 Plus (12.2)"
+  - "iPhone SE (12.2)"
+  - "iPhone X (12.2)"
+  - "iPhone Xs (12.2)"
+  - "iPhone Xs (12.2) + Apple Watch Series 4 - 40mm (5.2)"
+  - "iPhone Xs Max (12.2)"
+  - "iPhone Xs Max (12.2) + Apple Watch Series 4 - 44mm (5.2)"
   - "iPhone Xʀ (12.2)"
