--- a/spec/fixtures/xcode/xcode.yml
+++ b/spec/fixtures/xcode/xcode.yml
@@ -1,5 +1,5 @@
 version: "10.2"
-build_version: "10P91b"
+build_version: "10P99q"
 app_location: "/Applications/Xcode-10.2.app"
 simulators:
   - "Apple TV (12.2)"
