--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -8,20 +8,20 @@ os:
   system_integrity_protection: Enabled
 environment:
   keyboard_layout: com.apple.keylayout.US
-  timezone: PST
+  timezone: PDT
   screensaver_ask_for_password: error # TODO - what's up here?
 tools:
-  python: Python 2.7.15
-  python3: Python 3.7.2
-  pip: 'pip 19.0.2 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)'
-  pip3: 'pip 19.0.2 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)'
+  python: Python 2.7.16
+  python3: Python 3.7.3
+  pip: 'pip 19.0.3 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)'
+  pip3: 'pip 19.0.3 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)'
   java: "java version \"1.8.0_202\"\nJava(TM) SE Runtime Environment (build 1.8.0_202-b08)\nJava HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)"
-  parallel: 'GNU parallel 20190122'
+  parallel: 'GNU parallel 20190322'
 ruby:
   system: ruby 2.3.7p456 (2018-03-28 revision 63024) [universal.x86_64-darwin18]
   installed:
-    - 2.4.5
-    - 2.5.3
+    - 2.4.6
+    - 2.5.5
 power_settings:
   hibernatemode: 0
   womp: 1
