--- a/spec/fixtures/xcode/xcode.yml
+++ b/spec/fixtures/xcode/xcode.yml
@@ -1,5 +1,5 @@
 version: "10.2"
-build_version: "10P99q"
+build_version: "10E125"
 app_location: "/Applications/Xcode-10.2.app"
 simulators:
   - "Apple TV (12.2)"
@@ -9,29 +9,65 @@ simulators:
   - "Apple Watch Series 2 - 42mm (5.2)"
   - "Apple Watch Series 3 - 38mm (5.2)"
   - "Apple Watch Series 3 - 42mm (5.2)"
+  - "Distiller’s Mac (163)"
+  - "iPad (5th generation) (10.3.1)"
+  - "iPad (5th generation) (11.4)"
   - "iPad (5th generation) (12.2)"
   - "iPad (6th generation) (12.2)"
+  - "iPad Air (10.3.1)"
+  - "iPad Air (11.4)"
   - "iPad Air (12.2)"
+  - "iPad Air (3rd generation) (12.2)"
+  - "iPad Air 2 (10.3.1)"
+  - "iPad Air 2 (11.4)"
   - "iPad Air 2 (12.2)"
+  - "iPad Pro (10.5-inch) (10.3.1)"
+  - "iPad Pro (10.5-inch) (11.4)"
   - "iPad Pro (10.5-inch) (12.2)"
   - "iPad Pro (11-inch) (12.2)"
+  - "iPad Pro (12.9 inch) (10.3.1)"
+  - "iPad Pro (12.9-inch) (11.4)"
   - "iPad Pro (12.9-inch) (12.2)"
+  - "iPad Pro (12.9-inch) (2nd generation) (10.3.1)"
+  - "iPad Pro (12.9-inch) (2nd generation) (11.4)"
   - "iPad Pro (12.9-inch) (2nd generation) (12.2)"
   - "iPad Pro (12.9-inch) (3rd generation) (12.2)"
+  - "iPad Pro (9.7 inch) (10.3.1)"
+  - "iPad Pro (9.7-inch) (11.4)"
   - "iPad Pro (9.7-inch) (12.2)"
+  - "iPhone 5 (10.3.1)"
+  - "iPhone 5s (10.3.1)"
+  - "iPhone 5s (11.4)"
   - "iPhone 5s (12.2)"
+  - "iPhone 6 (10.3.1)"
+  - "iPhone 6 (11.4)"
   - "iPhone 6 (12.2)"
+  - "iPhone 6 Plus (10.3.1)"
+  - "iPhone 6 Plus (11.4)"
   - "iPhone 6 Plus (12.2)"
+  - "iPhone 6s (10.3.1)"
+  - "iPhone 6s (11.4)"
   - "iPhone 6s (12.2)"
+  - "iPhone 6s Plus (10.3.1)"
+  - "iPhone 6s Plus (11.4)"
   - "iPhone 6s Plus (12.2)"
+  - "iPhone 7 (10.3.1)"
+  - "iPhone 7 (11.4)"
   - "iPhone 7 (12.2)"
+  - "iPhone 7 Plus (10.3.1)"
+  - "iPhone 7 Plus (11.4)"
   - "iPhone 7 Plus (12.2)"
+  - "iPhone 8 (11.4)"
   - "iPhone 8 (12.2)"
+  - "iPhone 8 Plus (11.4)"
   - "iPhone 8 Plus (12.2)"
+  - "iPhone SE (10.3.1)"
+  - "iPhone SE (11.4)"
   - "iPhone SE (12.2)"
+  - "iPhone X (11.4)"
   - "iPhone X (12.2)"
   - "iPhone Xs (12.2)"
   - "iPhone Xs (12.2) + Apple Watch Series 4 - 40mm (5.2)"
   - "iPhone Xs Max (12.2)"
   - "iPhone Xs Max (12.2) + Apple Watch Series 4 - 44mm (5.2)"
-  - "iPhone Xʀ (12.2)"
+  - "iPhone Xʀ (12.2)
