Add missing close-quote
I applied a very naive vim macro and accidentally the last close quote mark.

--- a/spec/fixtures/xcode/xcode.yml
+++ b/spec/fixtures/xcode/xcode.yml
@@ -70,4 +70,4 @@ simulators:
   - "iPhone Xs (12.2) + Apple Watch Series 4 - 40mm (5.2)"
   - "iPhone Xs Max (12.2)"
   - "iPhone Xs Max (12.2) + Apple Watch Series 4 - 44mm (5.2)"
-  - "iPhone Xʀ (12.2)
+  - "iPhone Xʀ (12.2)"
