--- a/spec/fixtures/software.yml
+++ b/spec/fixtures/software.yml
@@ -1,6 +1,6 @@
 os:
-  system_version: macOS 10.14.3 (18D109)
-  kernel_version: Darwin 18.2.0
+  system_version: macOS 10.14.4 (18E226)
+  kernel_version: Darwin 18.5.0
   boot_volume: Macintosh HD
   boot_mode: Normal
   user_name: Distiller (distiller)
@@ -15,8 +15,8 @@ tools:
   python3: Python 3.7.3
   pip: 'pip 19.0.3 from /usr/local/lib/python2.7/site-packages/pip (python 2.7)'
   pip3: 'pip 19.0.3 from /usr/local/lib/python3.7/site-packages/pip (python 3.7)'
-  java: "java version \"1.8.0_202\"\nJava(TM) SE Runtime Environment (build 1.8.0_202-b08)\nJava HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)"
-  parallel: 'GNU parallel 20190322'
+  java: "openjdk version \"1.8.0_212\"\nOpenJDK Runtime Environment (AdoptOpenJDK)(build 1.8.0_212-b03)\nOpenJDK 64-Bit Server VM (AdoptOpenJDK)(build 25.212-b03, mixed mode)"
+  parallel: 'GNU parallel 20190422'
 ruby:
   system: ruby 2.3.7p456 (2018-03-28 revision 63024) [universal.x86_64-darwin18]
   installed:
